cluster/apps/web/openbudgeteer/ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: openbudgeteer
  namespace: web
spec:
  externalName: "docker2.${SECRET_INTERNAL_DOMAIN}"
  type: ExternalName

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openbudgeteer-ingress
  namespace: web
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/tls-acme: "true"
    # kubernetes.io/ingress.class: nginx-external
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/cors-allow-headers: "X-Forwarded-For, X-Real-IP, X-Frame-Options, X-Content-Type-Options, X-Forwarded-Proto"
    # nginx.ingress.kubernetes.io/proxy-body-size: "10G"
spec:
  ingressClassName: "nginx-internal"
  rules:
  - host: budget.${SECRET_DOMAIN}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: openbudgeteer
            port: 
              number: 7880
  tls:
  - hosts:
    - budget.${SECRET_DOMAIN}
    secretName: openbudgeteer-cert
status:
  loadBalancer: {}
